# glusterfs-restapi

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Makefile.am  gluster-rest.8
extra/: Makefile.am  glusterrestd.service.in  restconfig.json.in
src/: Makefile.am
src/gluster/: Makefile.am
src/gluster/cli/: peers.go  utils.go  volume.go
src/gluster/rest/: Makefile.am  glusterrestd.go  handlers_peers.go  handlers_volumes.go  middleware_extra.go  middleware_jwt.go  routes.go  vars.go.in
src/gluster/utils/: Makefile.am  apps.go  conf.go  peers.go  utils.go
tools/: Makefile.am  gluster-rest.py.in  peer_restcli.py.in
